objects/Hospital__c.object
<CustomObject>
    <fields>
        <fullName>Hospital_City__c</fullName>
        <label>Hospital City</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Full_Address__c</fullName>
        <formula>Hospital_Street_Number__c + &quot; &quot; + TEXT(Hospital_Street_Direction__c) + &quot; &quot; + Hospital_Street_Name__c +  &quot;, &quot; + Hospital_City__c + &quot;, &quot; + TEXT(Hospital_State__c) + &quot; &quot; + Hospital_Zipcode__c</formula>
        <label>Hospital Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Latitude__c</fullName>
        <label>Hospital Latitude</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hospital_Longitude__c</fullName>
        <label>Hospital Longitude</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hospital_Name__c</fullName>
        <label>Hospital Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Phone_Number__c</fullName>
        <label>Hospital Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hospital_State__c</fullName>
        <label>Hospital_State</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hospital_Street_Direction__c</fullName>
        <label>Hospital Street Direction</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hospital_Street_Name__c</fullName>
        <label>Hospital Street Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Street_Number__c</fullName>
        <label>Hospital Street Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Zipcode__c</fullName>
        <label>Hospital_Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Hospital</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>show_all</fullName>
        <columns>NAME</columns>
        <columns>Hospital_Name__c</columns>
        <columns>Hospital_Full_Address__c</columns>
        <columns>Hospital_Latitude__c</columns>
        <columns>Hospital_Longitude__c</columns>
        <filterScope>Everything</filterScope>
        <label>show all</label>
    </listViews>
    <nameField>
        <displayFormat>Hospital-{0000}</displayFormat>
        <label>Hospital Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hospitals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>